# Eldarin

./: .gitignore  1  LICENSE  README.md  inference.py  main.py  main_navigation.py  neuromorphic-navigation-system-outline.md  pyproject.toml  requirements.txt
config/: __init__.py  base.yaml  fpga_export.yaml  inference.yaml  navigation.yaml  train_event.yaml  train_multimodal.yaml  train_visdrone.yaml
datasets/: __init__.py  fred.py  synthetic.py  uav3d.py  uavdt.py  visdrone.py
figures/: fig_01.html  fig_02.html  fig_03.html  fig_04.html  fig_05.html  fig_06.html  fig_07.html  fig_08.html  fig_09.html  fig_10.html  index.html
fpga/: __init__.py  convert_to_snn.py  event_encode.py  export_fpga.py  snn_sim.py
fpga/hls_kernels/: vsa_kernel.cpp
model/: __init__.py  digital_twin.py  eldarin_model.py  fpe.py  hdc_classifier.py  heads.py  hierarchy.py  mixing.py  sdm.py  snn_layers.py  vo.py  vsa_hdc.py
model/encoders/: __init__.py  audio_encoder.py  event_encoder.py  imu_encoder.py  visual_encoder.py
navigation/: __init__.py  messages.py  system.py
navigation/control/: __init__.py  lqr.py  motor_esc.py
navigation/estimation/: __init__.py  ekf.py  hdc_evio.py
navigation/planning/: __init__.py  path_planner.py
navigation/slam/: __init__.py  hdc_slam.py
scripts/: download_datasets.sh  extract_paper_text.py  generate_figures.py  generate_figures_html.py  generate_teaser_image.py  generate_white_figures.py  prepare_visdrone.py  run_ablation.py
tests/: __init__.py  test_config.py  test_loss.py  test_models.py  test_navigation.py  test_vsa_hdc.py
utils/: __init__.py  data_loader.py  event_utils.py  loss.py  metrics.py  trainer.py  visualization.py
