[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eldarin"
version = "1.0.0"
description = "Hierarchical Multimodal 4D Detection & Tracking for UAVs with VSA/HDC"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Enotrium", email = "info@enotrium.com"}
]
keywords = [
    "uav", "detection", "tracking", "vsa", "hdc", "hyperdimensional-computing",
    "event-camera", "multi-modal", "computer-vision", "neuromorphic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    "Pillow>=10.0.0",
    "pycocotools>=2.0.6",
    "h5py>=3.9.0",
    "natsort>=8.4.0",
    "motmetrics>=1.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.13.0",
    "moviepy>=1.0.3",
    "PyYAML>=6.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "einops>=0.6.0",
    "timm>=0.9.0",
    "huggingface-hub>=0.16.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15.0"]
event = ["tonic>=1.0.0"]
snn = ["snntorch>=0.7.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
all = [
    "eldarin[wandb,event,snn,dev]",
]

[project.urls]
Homepage = "https://github.com/Enotrium/Eldarin"
Repository = "https://github.com/Enotrium/Eldarin"
Issues = "https://github.com/Enotrium/Eldarin/issues"

[tool.setuptools.packages.find]
include = ["model*", "utils*", "datasets*", "config*", "fpga*", "scripts*"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=model",
    "--cov=utils",
    "--cov=datasets",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU (deselect with '-m \"not gpu\"')",
    "vsa: VSA/HDC algebra tests",
    "detection: detection head tests",
    "tracking: tracking head tests",
    "vo: visual odometry tests",
    "integration: integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["__pycache__", ".git", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310"]